Add -x option Fix templates within templates